Changed purple accent color

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   --color-main: #36382E;
   --color-accent-t: #F9F2DC;
   --color-accent-g: #B4B950;
-  --color-accent-p: #D9CFF2;
+  --color-accent-p: #B39FE5;
   --color-accent-b: #1F4D7A;
 }
 
